Aggiunta del titolo e di alcune regole css

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="it" dir="ltr">
   <head>
     <meta charset="utf-8">
@@ -8,12 +7,16 @@
   </head>
   <body>
     <header>
-      <h1>Memory</h1>
+      <h1>Memory Game</h1>
     </header>
     <main>
-      <div class="cards">
+      <section>
+        <div class="content-cards">
+          <div id="bike">
 
-      </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
