--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     </header>
     <main>
       <section>
-        <div class="content-cards">
-          <div id="bike">
+        <div class="cardsstats">
 
           </div>
         </div>
