--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
         <div class="cardsstats">
 
           </div>
+        <div class="cardsstats">
+
+        </div>
+        <div class="cardsstats">
+
+        </div>
         </div>
       </section>
     </main>
