--- a/index.html
+++ b/index.html
@@ -10,17 +10,19 @@
       <h1>Memory Game</h1>
     </header>
     <main>
-      <section>
-        <div class="cardsstats">
+      <section id="line-1">
+        <div class="cardsstats" id="zero">
 
           </div>
-        <div class="cardsstats">
+        <div class="cardsstats" id="first">
 
         </div>
-        <div class="cardsstats">
+        <div class="cardsstats" id="second">
 
         </div>
-        </div>
+      </section>
+      <section id="line-2">
+
       </section>
     </main>
   </body>
