--- a/index.html
+++ b/index.html
@@ -22,7 +22,15 @@
         </div>
       </section>
       <section id="line-2">
+        <div class="cardsstats" id="zero-a">
 
+        </div>
+        <div class="cardsstats" id="first-b">
+
+        </div>
+        <div class="cardsstats" id="second-c">
+
+        </div>
       </section>
     </main>
   </body>
