--- a/index.html
+++ b/index.html
@@ -20,15 +20,36 @@
         <div class="cardsstats" id="second">
 
         </div>
+        <div class="cardsstats" id="third">
+
+        </div>
       </section>
       <section id="line-2">
         <div class="cardsstats" id="zero-a">
 
         </div>
-        <div class="cardsstats" id="first-b">
-
+        <div class="cardsstats" id="first-blank">
+          <img src="img/noun_air_balloon_3134741.png" alt="Pallone">
+           <span id="air-balloon">Air balloon</span>
         </div>
         <div class="cardsstats" id="second-c">
+
+        </div>
+        <div class="cardsstats" id="third-d">
+
+        </div>
+      </section>
+      <section id="line-3">
+        <div class="cardsstats" id="zero-ab">
+
+        </div>
+        <div class="cardsstats" id="first-bc">
+
+        </div>
+        <div class="cardsstats" id="second-cd">
+
+        </div>
+        <div class="cardsstats" id="third-de">
 
         </div>
       </section>
