--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       </section>
       <section id="line-3">
         <div class="cardsstats" id="zero-ab">
+          <span id="tractor">Tractor</span>
         </div>
         <div class="cardsstats" id="first-bc">
 
